change color for blue body

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,6 @@
 @tailwind utilities;
 
 body{
-    background-color: black;
+    background-color: rgb(14, 77, 214);
 }
 /* Importing Bootstrap SCSS file. */
